[gd_scene load_steps=4 format=2]

[ext_resource path="res://ChillZone/pet/Pet.tscn" type="PackedScene" id=1]
[ext_resource path="res://ChillZone/wash_pomopet_testing/ParticleEffectController.gd" type="Script" id=2]
[ext_resource path="res://ChillZone/wash_pomopet_testing/MouseBubblesParticle.tscn" type="PackedScene" id=3]

[node name="WashPomopet" type="Node2D"]

[node name="Pomopet" parent="." instance=ExtResource( 1 )]
position = Vector2( 958.976, 394.539 )

[node name="ParticleEffectController" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="MouseBubblesParticle" parent="ParticleEffectController" instance=ExtResource( 3 )]

[node name="MouseBubblesCooldownTimer" type="Timer" parent="ParticleEffectController"]
wait_time = 0.05
one_shot = true

[connection signal="hide" from="ParticleEffectController/MouseBubblesParticle" to="ParticleEffectController/MouseBubblesParticle" method="_on_MouseBubblesParticle_hide"]
[connection signal="timeout" from="ParticleEffectController/MouseBubblesCooldownTimer" to="ParticleEffectController" method="_on_MouseBubblesCooldownTimer_timeout"]
